Design the first section
I'm done designing the first section of this landing page. 3 more (and a footer) to go

--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,13 @@
     border-radius: 20%;
     border-style: none;
 }
+.right{
+    background-color: gray;
+    color: white;
+    height:150px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+}
