--- a/styles.css
+++ b/styles.css
@@ -76,11 +76,35 @@
     justify-content: center;
 }
 .container > p{
-    width: 200px;
+    width: 150px;
+    text-align: center;
 }
 .box{
     width: 150px;
     height: 150px;
     border: #3882F6, solid;
     border-radius: 10%;
+}
+.section-3{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.quote{
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    margin-bottom: 10px;
+    text-align: center;
+    width: 1000px;
+}
+.quoter{
+    font-weight: bold;
+    padding: 0px 200px;
+    align-self: flex-end;
+    margin: 0px 200px;
+    font-size: 18px;
 }
