--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
     margin-top: 5px;
     height: 30px;
     width: 80px;
-    border-radius: 20%;
+    border-radius: 15px;
     border-style: none;
 }
 .right{
@@ -107,4 +107,40 @@
     align-self: flex-end;
     margin: 0px 200px;
     font-size: 18px;
+}
+/* Section 4*/
+.section-4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.cta{
+    background-color: #3882F6;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 200px;
+    margin: 100px;
+    border-radius: 15px;
+    gap:64px;
+}
+
+.cta > button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    margin-top: 5px;
+    height: 30px;
+    width: 80px;
+    border-radius: 15px;
+    align-self: center;
+    border: 1px solid #F9FAF8;
+
+}
+/* Footer */
+.footer{
+    background-color: #1F2937;
+    color: #E5E7EB;
+    padding: 8px;
+    text-align: center;
 }
